--- a/Memoria-en-Ruta/src/carrusel de img/carrusel.css
+++ b/Memoria-en-Ruta/src/carrusel de img/carrusel.css
@@ -1,57 +1,42 @@
-.margen{
-    border: 3px solid green;
-    height: 400px;
-
+body{
+    background-color: bisque;
+    display: flex;
 }
-.contenedor{
+.contenedor {
+    border: 5px solid blue;
+    width: 100%;
+    max-width: 900px ;
+    overflow: hidden;
     position: relative;
-    height: 100%;
-    /*background-color: blue;*/
 }
-.contenedor{
+.img{
+    display: block;
     width: 100%;
     height: 100%;
-    border: 1px solid white;
-    border-radius:20px ;
-    overflow: hidden;
-}
-.boton_carrusel {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  background: rgba(255,255,255,0.6);
-  border: none;
-  padding: 10px 15px;
-  border-radius: 50%;
-  cursor: pointer;
-  z-index: 10;
-}
-
-.izquierdo {
-  left: 10px;
-}
-
-.derecho {
-  right: 10px;
-}
-.img ul {
-    display: flex;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    scroll-behavior: smooth;
-}
-.img li { 
-    flex: 0 0 auto;
-}
-.img {
-    width: 400px;
-    overflow: hidden;
-    border-radius: 20px;
-}
-.img img {
-    width: 400px;
-    height: 400px;
     object-fit: cover;
-    display: block;
+}
+.carrusel{
+    display: flex;
+    height: 300px;
+    width: 300%;
+    margin-left: -100%;
+}
+.contenido{
+    width: 100%;
+}
+.botones{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 40px;
+    height: 40px;
+    background-color: aliceblue;
+    font-weight: bold;
+    font-size: 30px;
+}
+#der{
+    right: 10px;
+}
+#izq{
+    left: 10px;
 }
