--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,10 +1,10 @@
  .Navbar {
-    margin: 0;
-    padding: 0;
+    margin-bottom: 55px;
+    padding: 0px;
     width: 100%;
     height: 60px;
     align-items: center;
-    background-color: black;
+    background: #222;
     display: flex;
     justify-content: flex-end;
  }
