--- a/Memoria-en-Ruta/src/carrusel de img/carrusel.css
+++ b/Memoria-en-Ruta/src/carrusel de img/carrusel.css
@@ -23,6 +23,7 @@ body{
 }
 .contenido{
     width: 100%;
+    position: relative;
 }
 .botones{
     position: absolute;
@@ -39,4 +40,14 @@ body{
 }
 #izq{
     left: 10px;
+}
+.texto{
+position: absolute;
+  bottom: 20px;
+  left: 20px;
+  color: white;
+  background: rgba(0,0,0,0.5);
+  padding: 5px 10px;
+  border-radius: 8px;
+  font-size: 18px;
 }
