--- a/src/css/Carrusel.css
+++ b/src/css/Carrusel.css
@@ -42,3 +42,19 @@
 #izq {
     left: 10px;
 }
+.texto{
+    position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0; /* puedes usar top:0 o center si querés */
+  padding: 12px;
+  background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.55) 100%);
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  color: white;
+  margin: 0;
+  font-weight: 600;
+  font-size: 14px;
+  text-shadow: 0 1px 2px rgba(0,0,0,0.6);
+}
