Rama de Contacto

--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,6 +1,6 @@
 .footer {
-    background: #222;
-    color: white;
+    background: #1B2A41;
+    color: #FA9F42;
     text-align: start;
     padding: 20px;
 }
