--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -30,7 +30,7 @@
  .minibar-box {
     position: absolute;
     left: 20px;
-    color: #E3C16F;
+    color: #e3c16f;
     font-size: 18px;
     font-weight: bold;
  }
