--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,40 @@ body {
     background-color: #F5FBEF;
 }
 
+@media (max-width: 850px) {
+    #red-button {
+        height: 6rem;
+        width: 6rem;
+        border-bottom-left-radius: 2rem;
+        border-top-right-radius: 2rem;
+        border-bottom-right-radius: 6px;
+        border-top-left-radius: 6px;
+    }
+}
+
 @media (max-width: 768px) {
     .destino {
         width: 45%;
         margin-bottom: 20px;
+    }
+
+    #redes-buttons {
+        flex-direction: column;
+        gap: 30px;
+        align-items: center;
+        padding-bottom: 50px;
+        height: auto;
+    }
+
+    #red-button {
+        height: 4rem;
+        border-bottom-left-radius: 1rem;
+        border-top-right-radius: 1rem;
+        border-bottom-right-radius: 4px;
+        border-top-left-radius: 4px;
+        font-size: 10px;
+        font-weight: bold;
+        display: grid;
     }
 }
 
