--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -1,7 +1,8 @@
 #container {
   margin: 30px;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+  justify-content: center;
   gap: 20px;
   margin-top: 20px;
 }
@@ -10,7 +11,7 @@
   display: flex;
   flex-direction: column;
   border-radius: 20px;
-  width: 400px;
+  width: 50%;
   gap: 1rem;
   background-color: #1B2A41;
   padding: 30px;
@@ -18,7 +19,7 @@
 }
 
 label,
-h2 {
+.subtitle {
   font-weight: bold;
   color: #E3C16F;
 }
@@ -85,7 +86,9 @@ h2 {
   background-color: #1B2A41;
   width: 90%;
   max-width: 62rem;
-  height: 520px;
+  padding: 20px;
+  margin: auto;
+  height: auto;
   color: #e3c16f;
   border-radius: 20px;
   font-weight: bold;
@@ -96,12 +99,16 @@ h2 {
   display: flex;
   justify-content: center;
   gap: 20px;
-  margin-bottom: 20px;
   flex-wrap: wrap;
+  padding: 20px;
   text-align: center;
 }
 
-#red-button {
+#red-button-Facebook,
+#red-button-Twitter,
+#red-button-Instagram,
+#red-button-LinkedIn,
+#red-button-WhatsApp {
   display: grid;
   justify-content: center;
   align-items: center;
@@ -120,6 +127,63 @@ h2 {
       rgb(184, 147, 63) 94.3%);
   color: #1B2A41;
   font-weight: bold;
+  font-size: 20px;
   border: none;
   cursor: pointer;
+}
+
+#red-button:hover {
+  box-shadow: 13px 13px 100px #E3C16F,
+    -13px -13px 100px #1B2A41;
+}
+
+/*Botones Redes Sociales*/
+#red-button-Facebook:hover {
+  transform: scaleY(1.3);
+  z-index: 1;
+  color: #ffffff;
+  box-shadow: 13px 13px 20px rgb(3, 106, 202);
+  background: linear-gradient(82.3deg,
+      rgb(3, 106, 202) 10.8%,
+      rgb(95, 141, 226) 94.3%);
+}
+
+#red-button-Instagram:hover {
+  transform: scaleY(1.3);
+  z-index: 1;
+  color: #ffffff;
+  background: linear-gradient(135deg,
+      rgb(106, 0, 177) 10%,
+      rgb(255, 0, 132) 80%);
+  box-shadow: 13px 13px 20px rgb(255, 0, 132);
+}
+
+#red-button-Twitter:hover {
+  transform: scaleY(1.3);
+  z-index: 1;
+  color: #ffffff;
+  background: linear-gradient(135deg,
+      rgb(12, 0, 20) 10%,
+      rgb(0, 0, 0) 80%);
+  box-shadow: 13px 13px 20px rgb(48, 48, 48);
+}
+
+#red-button-LinkedIn:hover {
+  transform: scaleY(1.3);
+  z-index: 1;
+  color: #ffffff;
+  background: linear-gradient(135deg,
+      rgb(43, 142, 255) 10%,
+      rgb(23, 128, 197) 80%);
+  box-shadow: 13px 13px 20px rgb(43, 142, 255);
+}
+
+#red-button-WhatsApp:hover {
+  transform: scaleY(1.3);
+  z-index: 1;
+  color: #ffffff;
+  background: linear-gradient(135deg,
+      rgb(31, 224, 102) 10%,
+      rgb(22, 168, 73) 80%);
+  box-shadow: 13px 13px 20px rgb(37, 211, 102);
 }
