--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -1,10 +1,11 @@
 #container {
-  margin: 30px;
+  margin: 20px;
   display: flex;
   align-items: flex-start;
   justify-content: center;
   gap: 20px;
   margin-top: 20px;
+  flex-direction: row;
 }
 
 #form {
@@ -87,7 +88,6 @@ label,
   width: 90%;
   max-width: 62rem;
   padding: 20px;
-  margin: auto;
   height: auto;
   color: #e3c16f;
   border-radius: 20px;
@@ -102,6 +102,7 @@ label,
   flex-wrap: wrap;
   padding: 20px;
   text-align: center;
+  height: auto;
 }
 
 #red-button-Facebook,
@@ -115,9 +116,9 @@ label,
   text-align: center;
   position: relative;
   overflow: hidden;
-  height: 8rem;
+  height: auto;
   width: 8rem;
-  padding: 0 2rem;
+  padding: 1rem;
   border-bottom-left-radius: 4rem;
   border-top-right-radius: 4rem;
   border-bottom-right-radius: 8px;
@@ -142,6 +143,7 @@ label,
   transform: scaleY(1.3);
   z-index: 1;
   color: #ffffff;
+  transition: 250ms ease-out;
   box-shadow: 13px 13px 20px rgb(3, 106, 202);
   background: linear-gradient(82.3deg,
       rgb(3, 106, 202) 10.8%,
@@ -152,6 +154,7 @@ label,
   transform: scaleY(1.3);
   z-index: 1;
   color: #ffffff;
+  transition: 250ms ease-out;
   background: linear-gradient(135deg,
       rgb(106, 0, 177) 10%,
       rgb(255, 0, 132) 80%);
@@ -162,6 +165,7 @@ label,
   transform: scaleY(1.3);
   z-index: 1;
   color: #ffffff;
+  transition: 250ms ease-out;
   background: linear-gradient(135deg,
       rgb(12, 0, 20) 10%,
       rgb(0, 0, 0) 80%);
@@ -172,6 +176,7 @@ label,
   transform: scaleY(1.3);
   z-index: 1;
   color: #ffffff;
+  transition: 250ms ease-out;
   background: linear-gradient(135deg,
       rgb(43, 142, 255) 10%,
       rgb(23, 128, 197) 80%);
@@ -182,8 +187,15 @@ label,
   transform: scaleY(1.3);
   z-index: 1;
   color: #ffffff;
+  transition: 250ms ease-out;
   background: linear-gradient(135deg,
       rgb(31, 224, 102) 10%,
       rgb(22, 168, 73) 80%);
   box-shadow: 13px 13px 20px rgb(37, 211, 102);
+}
+
+/*Mensaje enviado o no*/
+#Message-sent {
+  z-index: 1;
+  background-color: #1B2A41;
 }
