--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -1,22 +1,47 @@
 #container {
-  margin: 20px;
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  min-height: 85vh;
+  margin-left: 20px;
+  margin-right: 20px;
   gap: 20px;
-  margin-top: 20px;
-  flex-direction: row;
+}
+
+#form {
+  grid-area: 1 / 1 / 6 / 3;
+}
+
+#redes {
+  grid-area: 1 / 3 / 3 / 6;
+}
+
+#welcome-message {
+  grid-area: 3 / 3 / 6 / 6;
+}
+
+#welcome-message {
+  background-color: #1B2A41;
+  border-radius: 20px;
+  text-align: center;
+  font-weight: bold;
+  color: #E3C16F;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 #form {
   display: flex;
   flex-direction: column;
   border-radius: 20px;
-  width: 50%;
   gap: 1rem;
   background-color: #1B2A41;
-  padding: 30px;
-  padding-top: 10px;
+  padding: 20px;
+  padding-top: 12px;
 }
 
 label,
@@ -55,7 +80,9 @@ label,
 #send-span {
   display: flex;
   justify-content: center;
+  align-items: center;
   margin-top: 10px;
+  height: 100%;
 }
 
 #send {
@@ -81,12 +108,10 @@ label,
 /*redes sociales*/
 
 #redes {
-  display: grid;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
   text-align: center;
   background-color: #1B2A41;
-  width: 90%;
-  max-width: 62rem;
   padding: 20px;
   height: auto;
   color: #e3c16f;
