--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -1,23 +1,26 @@
 #container {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, 1fr);
-  min-height: 85vh;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: auto auto;
+  grid-template-areas: 
+  "form form redes redes redes redes"
+  "form form welcome welcome welcome welcome";
+  height: 85vh;
   margin-left: 20px;
   margin-right: 20px;
   gap: 20px;
 }
 
 #form {
-  grid-area: 1 / 1 / 6 / 3;
+  grid-area: form;
 }
 
 #redes {
-  grid-area: 1 / 3 / 3 / 6;
+  grid-area: redes;
 }
 
 #welcome-message {
-  grid-area: 3 / 3 / 6 / 6;
+  grid-area: welcome;
 }
 
 #welcome-message {
