--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -34,6 +34,63 @@
   font-size: 1.2rem;
 }
 
+.sent {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+  color: #fff;
+  text-align: center;
+}
+
+#s {
+  padding: 30px;
+  background-color: #1B2A41;
+  color: #E3C16F;
+  width: 50%;
+  height: auto;
+  border-radius: 20px;
+  font-weight: bold;
+  font-size: 1.4rem;
+  box-sizing: border-box;
+}
+
+#close {
+  margin-top: 20px;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  background: linear-gradient(82.3deg,
+      rgba(227, 193, 111, 1) 10.8%,
+      rgb(184, 147, 63) 94.3%);
+  height: 3rem;
+  width: 8rem;
+  border-bottom-left-radius: 4rem;
+  border-top-right-radius: 4rem;
+  border-bottom-right-radius: 8px;
+  border-top-left-radius: 8px;
+  color: #1B2A41;
+  font-weight: bold;
+  font-size: 1.2rem;
+  text-align: center;
+}
+
+#close:hover {
+  transform: scaleY(1.3);
+  z-index: 1;
+  transition: 250ms ease-out;
+  background: linear-gradient(135deg,
+      rgb(252, 207, 102) 10%,
+      rgb(227, 193, 111) 80%);
+  box-shadow: 13px 13px 20px rgb(167, 139, 76);
+}
+
 label,
 .subtitle {
   font-weight: bold;
@@ -67,7 +124,7 @@ label,
   color: #1B2A41;
 }
 
-#send-span {
+#sent-span {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -75,7 +132,7 @@ label,
   height: 100%;
 }
 
-#send {
+#sent {
   position: relative;
   overflow: hidden;
   height: 3rem;
@@ -94,7 +151,7 @@ label,
   cursor: pointer;
 }
 
-#send:hover {
+#sent:hover {
   transition: 250ms ease-out;
   border-bottom-left-radius: 8px;
   border-top-right-radius: 8px;
