--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,3 +1,4 @@
+ /* Estilos de la navbar */
  .Navbar {
     margin-bottom: 12px;
     padding: 0px;
@@ -30,7 +31,6 @@
  .minibar-box {
     position: absolute;
     left: 20px;
-    color: #e3c16f;
     font-size: 18px;
     font-weight: bold;
  }
@@ -42,14 +42,12 @@
  .Título {
     position: absolute;
     left: 75px;
-    color: #E3C16F;
     font-size: 30px;
     font-weight: bold;
  }
 
-
+ /* Estilos del menú desplegable */
  .menu a {
-    color: #e3c16f;
     text-decoration: none;
     padding: 10px;
     display: flex;
@@ -62,7 +60,7 @@
     top: 60px;
     left: auto;
     right: 0;
-    display: none;
+    display: none; /* Evitamos que se muestre en pantallas normales */
     flex-direction: column;
     background-color: #1B2A41;
     padding: 10px;
@@ -85,13 +83,11 @@
     cursor: pointer;
     display: none;
     margin-right: 20px;
-    color: #e3c16f;
  }
 
  .título-cel {
     position: absolute;
     left: 75px;
-    color: #E3C16F;
     font-size: 1.5rem;
     font-weight: bold;
     display: none;
