--- a/src/css/Sections.css
+++ b/src/css/Sections.css
@@ -1,24 +1,40 @@
+* {
+    color: #E3C16F;
+    font-family: Arial, sans-serif;
+}
+
+#d-t {
+    margin-top: 40px;
+    text-align: center;
+}
+
+.section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .viajes,
 .cenas {
+    background-color: #1B2A41;
+    border-radius: 20px;
+    width: 90%;
     padding: 40px 20px;
     text-align: center;
-    font-family: Arial, sans-serif;
-    margin: 40px 0;
     border-radius: 12px;
+    margin: 40px 0;
 }
 
 .viajes h2,
 .cenas h2 {
     font-size: 28px;
     margin-bottom: 10px;
-    color: #E3C16F;
 }
 
 .viajes p,
 .cenas p {
     font-size: 18px;
     margin-bottom: 25px;
-    color: #555;
 }
 
 /* Contenedor de tarjetas */
