--- a/src/css/Sections.css
+++ b/src/css/Sections.css
@@ -72,3 +72,25 @@
     background: #fafafa;
     color: #333;
 }
+
+/* Botón */
+#organize {
+    position: relative;
+    overflow: hidden;
+    height: 3rem;
+    width: 10rem;
+    margin-top: 30px;
+    padding: 0 2rem;
+    border-bottom-left-radius: 4rem;
+    border-top-right-radius: 4rem;
+    border-bottom-right-radius: 8px;
+    border-top-left-radius: 8px;
+    background: linear-gradient(82.3deg,
+            rgba(227, 193, 111, 1) 10.8%,
+            rgb(184, 147, 63) 94.3%);
+    color: #1B2A41;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    font-size: 1.2rem;
+}
