--- a/src/css/Carrusel.css
+++ b/src/css/Carrusel.css
@@ -1,6 +1,5 @@
 .contenedor {
     width: 100%;
-    /*max-width: 900px;*/
     overflow: hidden;
     position: relative;
 }
@@ -14,7 +13,7 @@
 
 .carrusel {
     display: flex;
-    height: 300px;
+    height: 500px;
     width: 300%;
     margin-left: -100%;
 }
@@ -25,14 +24,16 @@
 }
 
 .botones {
+    border: none;
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
     width: 40px;
+    transform: translateY(-50%);
+    background-color: transparent;
     height: 40px;
-    background-color: aliceblue;
     font-weight: bold;
-    font-size: 30px;
+    font-size: 2rem;
+    cursor: pointer;
 }
 
 #der {
@@ -43,12 +44,11 @@
     left: 10px;
 }
 
-.texto{
+.texto {
     position: absolute;
-  bottom: 20px;
-  left: 20px;
-  color: rgb(180, 30, 30);
-  padding: 5px 10px;
-  border-radius: 8px;
-  font-size: 18px;
+    bottom: 20px;
+    left: 20px;
+    color: rgb(180, 30, 30);
+    padding: 5px 10px;
+    font-size: 18px;
 }
