--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,10 +1,12 @@
+ /* Estilos de la navbar */
  .Navbar {
     margin-bottom: 12px;
     padding: 0px;
     width: 100%;
     height: 60px;
     align-items: center;
-    background: #222;
+    background: #1B2A41;
+    color: #ffffff;
     display: flex;
     justify-content: flex-end;
  }
@@ -16,7 +18,7 @@
  }
 
  .navbar-link:hover {
-    background-color: grey;
+    background-color: #0D324D;
     border-radius: 5px;
  }
 
@@ -29,7 +31,6 @@
  .minibar-box {
     position: absolute;
     left: 20px;
-    color: white;
     font-size: 18px;
     font-weight: bold;
  }
@@ -41,7 +42,53 @@
  .Título {
     position: absolute;
     left: 75px;
-    color: white;
     font-size: 30px;
     font-weight: bold;
+ }
+
+ /* Estilos del menú desplegable */
+ .menu a {
+    text-decoration: none;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+ }
+
+ .menu {
+    position: absolute;
+    top: 60px;
+    left: auto;
+    right: 0;
+    display: none; /* Evitamos que se muestre en pantallas normales */
+    flex-direction: column;
+    background-color: #1B2A41;
+    padding: 10px;
+    z-index: 9999;
+    width: 120px;
+    align-items: flex-end;
+    gap: 10px;
+    box-shadow: 2px 5px 10px rgba(0, 0, 0, 0.3);
+    border-bottom-left-radius: 20px;
+ }
+
+ .menu.open {
+    display: flex;
+ }
+
+ .hamburger {
+    background: none;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+    display: none;
+    margin-right: 20px;
+ }
+
+ .título-cel {
+    position: absolute;
+    left: 75px;
+    font-size: 1.5rem;
+    font-weight: bold;
+    display: none;
  }
