--- a/src/css/Sections.css
+++ b/src/css/Sections.css
@@ -1,24 +1,40 @@
+* {
+    color: #E3C16F;
+    font-family: Arial, sans-serif;
+}
+
+#d-t {
+    margin-top: 40px;
+    text-align: center;
+}
+
+.section {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .viajes,
 .cenas {
+    background-color: #1B2A41;
+    border-radius: 20px;
+    width: 90%;
     padding: 40px 20px;
     text-align: center;
-    font-family: Arial, sans-serif;
-    margin: 40px 0;
     border-radius: 12px;
+    margin: 40px 0;
 }
 
 .viajes h2,
 .cenas h2 {
     font-size: 28px;
     margin-bottom: 10px;
-    color: #222;
 }
 
 .viajes p,
 .cenas p {
     font-size: 18px;
     margin-bottom: 25px;
-    color: #555;
 }
 
 /* Contenedor de tarjetas */
@@ -55,4 +71,26 @@
     font-size: 20px;
     background: #fafafa;
     color: #333;
+}
+
+/* Botón */
+#organize {
+    position: relative;
+    overflow: hidden;
+    height: 3rem;
+    width: 10rem;
+    margin-top: 30px;
+    padding: 0 2rem;
+    border-bottom-left-radius: 4rem;
+    border-top-right-radius: 4rem;
+    border-bottom-right-radius: 8px;
+    border-top-left-radius: 8px;
+    background: linear-gradient(82.3deg,
+            rgba(227, 193, 111, 1) 10.8%,
+            rgb(184, 147, 63) 94.3%);
+    color: #1B2A41;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    font-size: 1.2rem;
 }
