--- a/src/css/Acerca.css
+++ b/src/css/Acerca.css
@@ -24,8 +24,8 @@ justify-content: center;
 align-items: center;
   aspect-ratio: 1/1;
   border: solid #e3c16f 7px;
-  height: 480px;
-  width: 480px;
+  height: auto;
+  width: 100%;
   backface-visibility: hidden;
 }
 div.photos > img {
@@ -43,8 +43,10 @@ div.photos > img {
 
 .envase {
     position: relative;
-    width: 30em;
-    height: 30em;
+    width: 90%;
+    max-width: 400px;
+    height: auto;
+    aspect-ratio: 1/1;
 }
 .carta{
     transform-style: preserve-3d;
@@ -82,9 +84,9 @@ border: solid #1B2A41 3px;
 
 .acomodar {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
-    padding: 10px;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    padding: 20px;
     justify-items: center;
     align-items: center;
 }
