--- a/src/css/Cena&Viaje.css
+++ b/src/css/Cena&Viaje.css
@@ -5,62 +5,83 @@
     gap: 40px;
     text-align: center;
     padding: 20px;
-    min-height: 100vh;
+    min-height: auto;
 }
 
-.books-container {
+.cards-container {
+    margin-top: 80px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 40px;
 }
 
-.book {
+.bronzeCard,
+.silverCard,
+.goldCard {
     position: relative;
     border-radius: 20px;
     width: 350px;
     height: 450px;
     background-color: #0D324D;
     box-shadow: 1px 1px 12px #969696;
-    transform: preserve-3d;
-    perspective: 2000px;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: flex-start;
-    padding-top: 1.5rem;
 }
 
-.book img {
-    width: 80%;
-    height: 30%;
-    border-radius: 20px;
-}
-
-.cover {
-    top: 0;
-    position: absolute;
-    background-color: #1B2A41;
-    width: 100%;
-    height: 100%;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: all 0.5s;
-    transform-origin: 0;
-    display: flex;
-    align-items: center;
+.bronzeCard::before {
+    content: "CENA BRONCE";
+    color: #1B2A41;
     justify-content: center;
-}
-
-.book:hover .cover {
-    transition: all 0.5s;
-    transform: rotateY(-80deg);
-}
-
-.cover>p {
-    font-size: 2rem;
+    align-items: center;
+    width: 350px;
+    padding: 10px 0px 10px;
+    background: linear-gradient(82.3deg,
+            rgba(205, 127, 50) 10.8%,
+            rgb(184, 120, 56) 94.3%);
+    transform: translateY(-60px);
+    border-radius: 20px;
     font-weight: bolder;
-    margin: 8px;
+}
+
+.silverCard::before {
+    content: "CENA PLATA";
+    color: #1B2A41;
+    justify-content: center;
+    align-items: center;
+    width: 350px;
+    padding: 10px 0px 10px;
+    background: linear-gradient(82.3deg,
+            rgb(206, 198, 198) 10.8%,
+            rgb(161, 159, 157) 94.3%);
+    transform: translateY(-60px);
+    border-radius: 20px;
+    font-weight: bolder;
+}
+
+.goldCard::before {
+    content: "CENA ORO";
+    color: #1B2A41;
+    justify-content: center;
+    align-items: center;
+    width: 350px;
+    padding: 10px 0px 10px;
+    background: linear-gradient(82.3deg,
+            rgb(245, 208, 111) 10.8%,
+            rgb(186, 120, 2) 94.3%);
+    transform: translateY(-60px);
+    border-radius: 20px;
+    font-weight: bolder;
+}
+
+.bronzeCard img,
+.silverCard img,
+.goldCard img {
+    width: 70%;
+    height: 130px;
+    border-radius: 20px;
 }
 
 #org {
@@ -96,7 +117,6 @@
 }
 
 #org-conteiner {
-    transform: translateY(110px);
     text-align: left;
     padding-left: 50px;
 }
