Las páginas de viaje y cena se movieron a la página princiál para darle más importancia a la misma, seagregaron animaciones hover a las cartas y botones de las mismas

--- a/src/App.css
+++ b/src/App.css
@@ -381,3 +381,12 @@ html {
         margin-right: 10px;
     }
 }
+
+/*------------------------------------------------------------------------------------------*/
+
+/*Responsive Página de cena y viaje*/
+@media (max-width: 1170px) {
+    .cards-container {
+        gap: 85px;
+    }
+}
