--- a/src/css/Cena&Viaje.css
+++ b/src/css/Cena&Viaje.css
@@ -1,13 +1,3 @@
-#menu-cards {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 40px;
-    text-align: center;
-    padding: 20px;
-    min-height: auto;
-}
-
 .cards-container {
     margin-top: 80px;
     display: flex;
@@ -24,7 +14,7 @@
     width: 350px;
     height: 450px;
     background-color: #0D324D;
-    box-shadow: 1px 1px 12px #969696;
+    box-shadow: 1px 1px 12px #141f2e;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -127,7 +117,7 @@
     width: 450px;
     height: 300px;
     background-color: #0D324D;
-    box-shadow: 1px 1px 12px #969696;
+    box-shadow: 1px 1px 12px #141f2e;
     display: flex;
     align-items: center;
     flex-direction: row;
@@ -186,4 +176,28 @@
 
 .oceaniaTrip::before {
     content: "SET OCEANÍA";
+}
+
+/*Animación de cada carta*/
+.americaTrip:hover,
+.europeTrip:hover,
+.oceaniaTrip:hover,
+.bronzeCard:hover,
+.silverCard:hover,
+.goldCard:hover {
+    transform: scale(1.05);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.25);
+    cursor: pointer;
+}
+
+/*Animación de boton*/
+#org:hover {
+    transition: 250ms ease-out;
+    border-bottom-left-radius: 8px;
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 4rem;
+    border-top-left-radius: 4rem;
+    background: linear-gradient(135deg,
+            rgb(226, 189, 102) 10.8%,
+            rgb(185, 147, 56) 94.3%);
 }
