--- a/src/css/Sections.css
+++ b/src/css/Sections.css
@@ -18,59 +18,11 @@
 .cenas {
     background-color: #1B2A41;
     border-radius: 20px;
-    width: 90%;
+    width: 100%;
     padding: 40px 20px;
     text-align: center;
     border-radius: 12px;
-    margin: 40px 0;
-}
-
-.viajes h2,
-.cenas h2 {
-    font-size: 28px;
-    margin-bottom: 10px;
-}
-
-.viajes p,
-.cenas p {
-    font-size: 18px;
-    margin-bottom: 25px;
-}
-
-/* Contenedor de tarjetas */
-.destinos {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    flex-wrap: wrap;
-}
-
-/* Cada tarjeta */
-.destino {
-    background: white;
-    border-radius: 10px;
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.15);
-    overflow: hidden;
-    width: 250px;
-    transition: transform 0.3s, box-shadow 0.3s;
-}
-
-.destino:hover {
-    transform: scale(1.05);
-    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.25);
-}
-
-.destino img {
-    width: 100%;
-    height: auto;
-    display: block;
-}
-
-.destino h3 {
-    padding: 12px;
-    font-size: 20px;
-    background: #fafafa;
-    color: #333;
+    margin: 40px 0 80px 0;
 }
 
 /* Botón */
