--- a/src/css/ModoOscuro.css
+++ b/src/css/ModoOscuro.css
@@ -10,26 +10,40 @@ html {
 
 /* Modo claro (por defecto) */
 body.light {
-    background-color: #ffffff;
+    background-color: #F5FBEF;
     color: #000000;
 }
 
 /* Modo oscuro */
 body.dark {
     background-color: #000000;
-    color: #ffffff;
 }
 
 /* Links y botones */
 body.dark a {
-    color: #ffffff;
+    color: #e3c16f;
 }
 
-body.dark button {
+body.dark .botones {
     color: #000000;
 }
 
-/* Modo oscuro */
+/*Menu desplegable*/
+body.dark .hamburger {
+    color: #e3c16f;
+}
+
+body.dark .menu.open {
+    background-color: #1b1b1b;
+}
+
+/*Componentes*/
+body.dark .section,
+body.dark #seccion2,
+body.dark #root {
+    background-color: #000000;
+}
+
 body.dark .cenas,
 body.dark .viajes,
 body.dark .Navbar,
@@ -59,12 +73,19 @@ body.dark .europeTrip,
 body.dark .oceaniaTrip,
 body.dark .bronzeCard,
 body.dark .silverCard,
-body.dark .goldCard {
+body.dark .goldCard,
+body.dark #s {
     background-color: #1b1b1b;
     box-shadow: 1px 1px 12px #050505;
 }
 
 /* Modo Claro */
+body.light .section,
+body.light #seccion2,
+body.light #root {
+    background-color: #F5FBEF;
+}
+
 body.light .cenas,
 body.light .viajes,
 body.light .Navbar,
@@ -86,7 +107,7 @@ body.light .oceaniaTrip,
 body.light .bronzeCard,
 body.light .silverCard,
 body.light .goldCard {
-    background-color: #1B2A41;
+    background-color: #1f3352;
 }
 
 body.light .complete {
